--- a/_locales/he/messages.json
+++ b/_locales/he/messages.json
@@ -193,6 +193,10 @@
     "message": "נִרְאֶה טוב",
     "description": "Confirmation button after user chose what to block on the page"
   },
+  "back": {
+    "message": "הקודם",
+    "description": "Back to previous page button"
+  },
   "add_info": {
     "message": "מידע נוסף",
     "description": "section title on hidding wizard, shown when advance user option enabled"
@@ -1440,6 +1444,10 @@
   "only_block_ads_on_these_sites": {
     "message": "חסום פרסומות רק באתרים אלו:",
     "description": "Label for textbox where user enters a list of sites on Customize tab"
+  },
+  "format": {
+    "message": "תסדיר:",
+    "description": "Example showing users how to input a list of sites on the Customize tab. You can translate the 'news' and 'siteN' but leave the '|'s and '~'s in place."
   },
   "warning_overrules_filters": {
     "message": "אזהרה: בכל האתרים האחרים תראה פרסומות!\nזה גובר על כל המסננים האחרים עבור האתרים הללו.",
@@ -2761,6 +2769,54 @@
     "message": "תודה",
     "description": "Message for help flow in popup menu."
   },
+  "got_it_no_period": {
+    "message": "הבנתי",
+    "description": "Button text on the DC options page."
+  },
+  "still_see_distractions": {
+    "message": "האם אתה עדין רואה את ההסחה?",
+    "description": "message text on the help flow in popup menu."
+  },
+  "which_distractions": {
+    "message": "אילו הסחות?",
+    "description": "Message for help flow in popup menu."
+  },
+  "page_is_whitelisted_distraction": {
+    "message": "עמוד זה נמצא ברשימת ההתרה שלך וזאת הסיבה שאתה הסחה.",
+    "description": "Message for help flow in popup menu."
+  },
+  "wont_change_anything_distraction": {
+    "message": "לא נשנה כלום כך שתמשיך לראות הסחות.",
+    "description": "Message for help flow in popup menu."
+  },
+  "reload_not_see_distraction": {
+    "message": "טען מחדש את הדף כך שלא תראה את ההסחה הזאת יותר!",
+    "description": "Message for help flow in popup menu."
+  },
+  "still_see_distraction": {
+    "message": "האם אתה עדין רואה את ההסחה?",
+    "description": "Message for help flow in popup menu."
+  },
+  "paused_not_blocking_distraction": {
+    "message": "AdBlock מושהה כרגע, אז אנחנו לא חוסמים הסחות כלשהן.",
+    "description": "panel text on the help flow in popup menu."
+  },
+  "resume_reload_distraction": {
+    "message": "האם אתה רוצה לאפשר את AdBlock ולטעון מחדש את הדף?",
+    "description": "panel text on the help flow in popup menu."
+  },
+  "autoplay_videos": {
+    "message": "סרטונים צפים",
+    "description": "Checbox label text for help flow in popup menu."
+  },
+  "surveys": {
+    "message": "סקרים",
+    "description": "Checbox label text for help flow in popup menu."
+  },
+  "next": {
+    "message": "הבא",
+    "description": "Button label text for help flow in popup menu."
+  },
   "adblock_logo": {
     "message": "סמליל AdBlock",
     "description": "Text in the alt attribute of an AdBlock logo image."
@@ -2985,6 +3041,10 @@
     "message": "גלה ערכות נושא!",
     "description": "Part 2 of a call-to-action on the Popup menu"
   },
+  "block_floating_videos": {
+    "message": "חסום סרטונים צפים",
+    "description": "Part 1 of a call-to-action on the Popup menu"
+  },
   "notification_antiadblock_message": {
     "message": "אתר זה ידוע בראות הודעות מוכוונות אל משתמשי AdBlock. האם אתה רוצה ש־AdBlock יסתיר הודעות מוכוונות?"
   },
@@ -3053,6 +3113,18 @@
   },
   "adblock_vpn": {
     "message": "AdBlock VPN",
+    "description": "Text of a Options page lower menu button"
+  },
+  "adblock_newsletter": {
+    "message": "עלון AdBlock",
+    "description": "Text of a Options page lower menu button"
+  },
+  "added_mailing_list": {
+    "message": "התווספת אל רשימת הדיוור של AdBlock.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "email_address_placeholder": {
+    "message": "הכנס את כתובת הדוא״ל שלך",
     "description": "Text of a Options page lower menu button"
   },
   "youve_blocked_num_ads": {
@@ -3405,8 +3477,12 @@
     "message": "דחה באופן אוטומטי בקשות 'התר התראות' מאתרים שאתה מבקר בהם.",
     "description": "Description of 'block site notifications' on the distraction control options page"
   },
+  "stop_autoplay_videos": {
+    "message": "הפסק סרטונים צפים",
+    "description": "Sub-header on the distraction control options page"
+  },
   "prevent_videos": {
-    "message": "מנע מסרטונים להתנגן באופן אוטומטי ועצור סרטונים 'צפים' ממעקב אחריך בזמן שאתה גולש.",
+    "message": "מנע מרוב הסרטונים להתנגן באופן אוטומטי, והפסק סרטונים צפים ממעקב אחריך בזמן שאתה גולש.",
     "description": "Description of 'stop autoplay videos' on the distraction control options page"
   },
   "block_newsletter_popups": {
@@ -3416,5 +3492,9 @@
   "done_reload_page": {
     "message": "ברגע שנסיים, אנא טען מחדש את הדף.",
     "description": "text on panel in the help flow"
+  },
+  "no_thanks": {
+    "message": "לא תודה",
+    "description": "button text in the help flow"
   }
 }
