--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -2390,7 +2390,7 @@
     "description": "Text on a delete button"
   },
   "filteracceptable_ads_privacy": {
-    "message": "Privasi Iklan yang Diterima",
+    "message": "Privasi Iklan yang Diperbolehkan",
     "description": "A filter list"
   },
   "acceptable_ads_privacy": {
