--- a/_locales/ms/messages.json
+++ b/_locales/ms/messages.json
@@ -79,6 +79,10 @@
     "message": "Untuk menyembunyikan butang, klik kanan dan pilih Buang daripada Bar Alatan. Anda boleh paparkannya semula di bawah menu Firefox -> Penyesuaian.",
     "description": "Message explaining how to hide the AdBlock toolbar button. 'Remove from Toolbar' should match the text that Firefox displays when you right click a toolbar button, and 'Customize' should match the text that shows when you click the button on the Firefox toolbar with three lines."
   },
+  "isithidden": {
+    "message": "Adakah item itu tersembunyi?",
+    "description": "'Block an ad' wizard usage explanation"
+  },
   "slidertitle": {
     "message": "Langkah 1: Kenal pasti apa yang ingin disekat",
     "description": "'Block an ad' wizard title"
@@ -2939,6 +2943,10 @@
   },
   "adblock_vpn": {
     "message": "AdBlock VPN",
+    "description": "Text of a Options page lower menu button"
+  },
+  "email_address_placeholder": {
+    "message": "Masukkan alamat e-mel anda",
     "description": "Text of a Options page lower menu button"
   },
   "youve_blocked_num_ads": {
