--- a/_locales/no/messages.json
+++ b/_locales/no/messages.json
@@ -2310,6 +2310,10 @@
     "message": "AdBlock VPN",
     "description": "Text of a Options page lower menu button"
   },
+  "email_address_placeholder": {
+    "message": "Skriv inn din e-postadresse",
+    "description": "Text of a Options page lower menu button"
+  },
   "enjoying_adblock": {
     "message": "Liker du AdBlock?",
     "description": "Text of a footer in the popup menu help flow asking users to leave us a review."
