--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -2695,6 +2695,10 @@
     "message": "AdBlock VPN",
     "description": "Text of a Options page lower menu button"
   },
+  "email_address_placeholder": {
+    "message": "Введіть свою електронну пошту",
+    "description": "Text of a Options page lower menu button"
+  },
   "youve_blocked_num_ads": {
     "message": "Ви заблокували $numBlocked$ рекламні оголошення!",
     "description": "Text of a menu item in the popup menu asking users to leave us a review. The $numBlocked$ will be replaced with the number of ads the users has blocked, starting at 10,000.",
