--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,12 @@
 
 UNRELEASED:
 
+Version: 4.44.0, Date: 2022-03-07
+- Removed the logic to show the "New" badge text on extension update
+- In preparation for manifest V3, and to help us better understand how our users use AdBlock, we've added
+  - AdBlock Options Page Telemetry
+  - filter list subscription information to the ping data
+
 Version: 4.43.0, Date: 2022-01-25
 - Fixed several issues on the AdBlock popup menu
 - Removed the CryptoCurrency BitCoin Mining Protection filter list from the list of subscriptions added for new users
