--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -2557,6 +2557,14 @@
     "message": "Nouveau ",
     "description": "Max 4 characters. If it's not possible to translate in four characters or less, please don't translate. Text in the badge of our extension toolbar icon."
   },
+  "vpn_cta_msg": {
+    "message": "Présentation d'AdBlock VPN",
+    "description": "Text of a VPN call-to-action item in the popup menu."
+  },
+  "vpn_cta_msg_hover": {
+    "message": "L’Internet, sans souci",
+    "description": "on hover text of a call-to-action item in the popup menu."
+  },
   "new_cta_default_text": {
     "message": "Améliorez votre AdBlock",
     "description": "Text of a temporary call-to-action item in the popup menu."
