--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -2557,6 +2557,14 @@
     "message": "Новинка",
     "description": "Max 4 characters. If it's not possible to translate in four characters or less, please don't translate. Text in the badge of our extension toolbar icon."
   },
+  "vpn_cta_msg": {
+    "message": "Представляем AdBlock VPN",
+    "description": "Text of a VPN call-to-action item in the popup menu."
+  },
+  "vpn_cta_msg_hover": {
+    "message": "Пользуйтесь Интернетом без стресса",
+    "description": "on hover text of a call-to-action item in the popup menu."
+  },
   "new_cta_default_text": {
     "message": "Обновите AdBlock",
     "description": "Text of a temporary call-to-action item in the popup menu."
