--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,11 @@
 
 UNRELEASED:
 
+Version: 4.46.0, Date: 2022-04-18
+- Added a AdBlock popup menu message about the AdBlock VPN
+- Show the /update page to let users know what features have been updated in the last 6 months.
+- Added checks to enhance content script messages security
+
 Version: 4.44.0, Date: 2022-03-07
 - Removed the logic to show the "New" badge text on extension update
 - In preparation for manifest V3, and to help us better understand how our users use AdBlock, we've added
