--- a/_locales/pt_PT/messages.json
+++ b/_locales/pt_PT/messages.json
@@ -2537,6 +2537,14 @@
     "message": "Novo",
     "description": "Max 4 characters. If it's not possible to translate in four characters or less, please don't translate. Text in the badge of our extension toolbar icon."
   },
+  "vpn_cta_msg": {
+    "message": "Apresentando AdBlock VPN",
+    "description": "Text of a VPN call-to-action item in the popup menu."
+  },
+  "vpn_cta_msg_hover": {
+    "message": "Use a Internet sem preocupação",
+    "description": "on hover text of a call-to-action item in the popup menu."
+  },
   "new_cta_default_text": {
     "message": "Atualize o seu AdBlock",
     "description": "Text of a temporary call-to-action item in the popup menu."
