--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -2557,6 +2557,14 @@
     "message": "Ny",
     "description": "Max 4 characters. If it's not possible to translate in four characters or less, please don't translate. Text in the badge of our extension toolbar icon."
   },
+  "vpn_cta_msg": {
+    "message": "Vi presenterar AdBlock VPN",
+    "description": "Text of a VPN call-to-action item in the popup menu."
+  },
+  "vpn_cta_msg_hover": {
+    "message": "Ett bekymmersfritt internet",
+    "description": "on hover text of a call-to-action item in the popup menu."
+  },
   "new_cta_default_text": {
     "message": "Uppgradera ditt AdBlock",
     "description": "Text of a temporary call-to-action item in the popup menu."
