Updated with version: 4.46.1 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 4.46.1, Date: 2022-05-02
+- Continue to show /update page for those users that haven't seen the Spring 2022 update
+
 Version: 4.46.0, Date: 2022-04-18
 - Added a AdBlock popup menu message about the AdBlock VPN
 - Show the /update page to let users know what features have been updated in the last 6 months.
@@ -161,9 +164,9 @@ Version: 4.22.0, Date: 2020-09-24
 - Updated / fixed a few of the themes colors
 - Updated DOM Purify to version 2.0.15
 - Updated to ABP Core 3.9.5
-- Removed the 'onUpdate' logic added for the YouTube Subscribed Channel Allowlist feature
+- Removed the 'onUpdate' logic added for the YouTube Subscribed Channelï¿½Allowlist feature
 - Added a AdBlock Premium status indicator to the AdBlock popup menu and options page
-- Fixed an issue with the YouTube Channel Allowlist feature
+- Fixed an issue with the YouTube Channelï¿½Allowlist feature
 
 Version: 4.21.0, Date: 2020-09-17
 - Fixed an issue when subscribing to a filter list via a subscription link
