Updated with version: 4.46.2 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 4.46.2, Date: 2022-05-15
+- Continue to show /update page for those users that haven't seen the Spring 2022 update
+
 Version: 4.46.1, Date: 2022-05-02
 - Continue to show /update page for those users that haven't seen the Spring 2022 update
 
@@ -32,7 +35,6 @@ Version: 4.41.0, Date: 2021-12-10
 - Added a CTA to notify our users about the AdBlock VPN
 - Updated the bundled Snippets library to 0.3.2
 
-
 Version: 4.40.0, Date: 2021-11-11
 - Continue to show /update page for those users that haven't seen the Fall 2021 update
 - For our AdBlock Premium users, the extension will now add an flag to our website to let the website know the visitor is a premium user
@@ -40,7 +42,6 @@ Version: 4.40.0, Date: 2021-11-11
 - In preparation for manifest V3, and to help us better understand how our users use AdBlock, we've added custom rule counts to the telemetry (ping) data
 - Added an Email CTA to the AdBlock Options page
 - Added host permissions information to the "debug" data available on the Support tab of the AdBlock Option page
-
 
 Version: 4.39.1, Date: 2021-10-25
 - Show the /update page to let users know what features have been updated in the last 6 months.
