Updated with version: 5.0.3 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 5.0.3, Date: 2022-07-15
+- Fixed a performance issue in the anonymous data collection, and image swap feature
+
 Version: 5.0.2, Date: 2022-06-28
 - Fixed an issue in the release build script
 - Updated to the new eyeo ad blocking SDK.
