--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 5.0.4, Date: 2022-07-15
+- Fixed an issue with a missing entry in the locale messages file
+
 Version: 5.0.3, Date: 2022-07-15
 - Fixed a performance issue in the anonymous data collection, and image swap feature
 
