Updated with version: 5.0.5 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,10 @@
 
 UNRELEASED:
 
+Version: 5.0.5, Date: 2022-08-16
+- Fixed an issue with telemetry possibly being sent prior to initialization being complete
+- Updated the Snippets library to version 0.4.1
+
 Version: 5.0.4, Date: 2022-07-15
 - Fixed an issue with a missing entry in the locale messages file
 
