--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,14 @@
 
 UNRELEASED:
 
+Version: 5.1.0, Date: 2022-08-22
+- Removed the 'social media' links on the AdBlock Options page when the user is subscribed to the Anti Social Filter list
+- Fixed an issue on the AdBlock Bug Report page with the 'steps' field not highlighted when left blank
+- Fixed an issue with a missing error message when a user would edit their custom filters on the Customize tab of the AdBlock Options page
+- Fixed an issue with anonymous filter list usage data incorrectly determining the filter list subscriptions for a filter list rule
+- Updated the AdBlock On Page icon
+
+
 Version: 5.0.5, Date: 2022-08-16
 - Fixed an issue with telemetry possibly being sent prior to initialization being complete
 - Updated the Snippets library to version 0.4.1
