--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -3149,6 +3149,10 @@
   "filter_invalid_regexp": {
     "message": "Invalid regular expression"
   },
+  "filter_invalid_css": {
+    "message": "Invalid CSS selector",
+    "description": "Error message that is shown when the user has an inlvaild CSS query in their custom filter."
+  },
   "filter_snippet_nodomain": {
     "message": "No active domain specified for snippet filter"
   },
