--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,10 @@
 
 UNRELEASED:
 
+Version: 5.1.1, Date: 2022-08-29
+- Replaced the abp-snippets git submodule with the @eyeo/snippets npm package and upgraded it to 0.5.2
+- Cleaned up and fixed a couple of issues with the AdBlock package.json file
+
 Version: 5.1.0, Date: 2022-08-22
 - Removed the 'social media' links on the AdBlock Options page when the user is subscribed to the Anti Social Filter list
 - Fixed an issue on the AdBlock Bug Report page with the 'steps' field not highlighted when left blank
