Updated with version: 5.1.1 changes

--- a/adblock-betafish/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 5.1.2, Date: 2022-09-06
+- Show the /update page to let users know about the new AdBlock VPN
+
 Version: 5.1.1, Date: 2022-08-29
 - Replaced the abp-snippets git submodule with the @eyeo/snippets npm package and upgraded it to 0.5.2
 - Cleaned up and fixed a couple of issues with the AdBlock package.json file
