--- a/adblock-betafish/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 5.1.3, Date: 2022-10-07
+- Stop showing the /update page to let users know about the new AdBlock VPN
+
 Version: 5.1.2, Date: 2022-09-06
 - Show the /update page to let users know about the new AdBlock VPN
 
