Updated with version: 5.1.1 changes

--- a/adblock-betafish/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 5.2.0, Date: 2022-10-10
+- Show the /update page to let users know about recent changes to AdBlock
+
 Version: 5.1.3, Date: 2022-10-07
 - Stop showing the /update page to let users know about the new AdBlock VPN
 
