Updated with version: 5.3.2 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 5.3.2, Date: 2022-11-18
+- Show the /update page to let users know about the AdBlock Premium
+
 Version: 5.3.1, Date: 2022-11-16
 - Fixed an issue with the sending of telemetry
 - Fixed an issue with the format of data being sent to the backup log server
