Updated with version: 5.3.3 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,10 @@
 
 UNRELEASED:
 
+Version: 5.3.3, Date: 2022-12-19
+- Stop opening the /update page to let users know about the AdBlock Premium
+- Added the Crotian locale to update an old Chrome web store Crotian listing
+
 Version: 5.3.2, Date: 2022-11-18
 - Show the /update page to let users know about the AdBlock Premium
 
